profile photo & about me are added

--- a/MSIT-Journey.html
+++ b/MSIT-Journey.html
@@ -4,5 +4,79 @@
 	<title>
 		MSIT JOURNEY
 	</title>
-</head>
+	</head>
+	<style>
+        .img-container {
+           text-align: center;
+      }
+      h1 {
+      	text-align: center;
+      	color: "blue";
+      }
+      table, th, td {
+       border: 1px solid black;
+     }
+	</style>
+	<h1>
+		MSIT JOURNEY
+	</h1>
+	<body>
+		<h2>
+		V.Divya Lakshmi:
+	</h2>
+		<div class="img-container">
+            <img src="profile.jpg" width="300px"height="300px" align = "centre">
+    </div>
+        <h2>About me</h2>
+        I am divya, born and raised in Kosuru which is in Andha Pradesh.
+        <h3>Academics:</h3>
+        <table>
+        	<tr>
+        		<th>Degree</th>
+        		<th>Institute</th>
+        		<th>Year of Pass</th>
+        	</tr>
+        	<tr>
+        		<td>MSIT</td>
+        		<td>IIIT Hyderabad</td>
+        		<td>Pursuing</td>
+        	</tr>
+        	<tr>
+        		<td>B.Tech</td>
+        		<td>Sri Sunflower College of Engineering & Technology</td>
+        		<td>2019</td>
+        	</tr>
+        	<tr>
+        		<td>Intermediate</td>
+        		<td>Sri Sarada Sunflower Junior College</td>
+        		<td>2015</td>
+        	</tr>
+        	<tr>
+        		<td>SSC</td>
+        		<td>Vijayasri Sunflower High School</td>
+        		<td>2013</td>
+        	</tr>
+        </table>
+        <h3>Strengths:</h3>
+        <ul>
+        	<li>Self Confidence</li>
+        	<li>Self Motivation</li>
+        	<li>Dedication</li>
+        	<li>Good Listener</li>
+        	<li>Good Learner</li>
+        </ul>
+        <h3>Hobbies:</h3>
+        <ul>
+        	<li>Playing Indoor Games</li>
+        	<li>Cooking</li>
+        	<li>Surfing Internet</li>
+        </ul>
+        <h3>Experience:</h3>
+		As a fresher, I don't have any working experience, but I will prove once the opportunity comes.
+        <h3>Short Term Goal:</h3>
+		My short term goal is to get placed in a reputed company which will give me an opportunity to enhance my skills and Knowledge.
+        <h3>Long Term Goal:</h3>
+		My long term goal is I want to settle as a Principal of an Educational Institute.
+
+    </body>
 </html>
