MSIT courses and Experience added

--- a/MSIT-Journey.html
+++ b/MSIT-Journey.html
@@ -16,6 +16,7 @@
       table, th, td {
        border: 1px solid black;
      }
+     body {background-color: #92a8d1;}
 	</style>
 	<h1>
 		MSIT JOURNEY
@@ -30,7 +31,7 @@
         <h2>About me</h2>
         I am divya, born and raised in Kosuru which is in Andha Pradesh.
         <h3>Academics:</h3>
-        <table>
+        <table align="centre">
         	<tr>
         		<th>Degree</th>
         		<th>Institute</th>
@@ -77,6 +78,25 @@
 		My short term goal is to get placed in a reputed company which will give me an opportunity to enhance my skills and Knowledge.
         <h3>Long Term Goal:</h3>
 		My long term goal is I want to settle as a Principal of an Educational Institute.
-
+        <h2>LIST OF COURSES</h2>
+        <ol>
+        	<li>Computational Thinking</li>
+        	<li>Python Programming</li>
+        	<li>Data Science</li>
+        	<li>Java Programming</li>
+        	<li>Algorithms & Data Structures</li>
+        	<li>Data Bases</li>
+        	<li>Software Engineering Foundation</li>
+        	<li>Introduction to Operating Systems</li>
+        	<li>Computer Networks</li>
+        	<li>Introduction to Cyber Security</li>
+        </ol>
+        <h2>Experience in MSIT</h2>
+        <p>
+          Got Tremendous Experience through MSIT. Learning by Doing helped me a lot in gaining large amount of knowledge regarding Information Technology.Due to Competitive Programming my coding capability has increased.In Addition to IT, Soft Skills also helped me a lot in exposing myself and in developing my own personality.
+        </p>
+        <p>
+          One of the innovative experiences in MSIT is the Almini Engage where Aluminis will be sharing their own carrier experiences with us which helps us a lot in building our career.
+      </p>
     </body>
 </html>
