--- a/project0/aboutme.html
+++ b/project0/aboutme.html
@@ -6,6 +6,7 @@
   </title>
   </head>
   <style>
+    $font-family:calibri,garamond,serif;
   	h1 {
         text-align: center;
         color: "red";
@@ -14,19 +15,19 @@
        body {
       background-color: #92a8d1;}
       p{
-        font-family:calibri,garamond,serif;font-size:20px;
+        font-family:$font-family;font-size:20px;
       }
   	h2{
-        font-family:calibri,serif;font-size:30px;
+        font-family:$font-family;font-size:30px;
       }
       h3{
-        font-family:calibri,garamond,serif;font-size:20px;
+        font-family:$font-family;font-size:20px;
       }
       ul{
-        font-family:calibri,garamond,serif;font-size:20px;
+        font-family:$font-family;font-size:20px;
       }
       ol{
-        font-family:calibri,garamond,serif;font-size:20px;
+        font-family:$font-family;font-size:20px;
         background: #ffe5e5;
         padding: 5px;
         margin-left: 35px;
