--- a/project0/contact.html
+++ b/project0/contact.html
@@ -4,6 +4,7 @@
 	<title>Contact</title>
 </head>
 <style>
+  $font-family:calibri,garamond,serif;
 	input[type=text], select {
               width: 50%;
               padding: 12px 20px;
@@ -31,10 +32,10 @@
      body {
       background-color: #92a8d1;}
       p{
-        font-family:calibri,garamond,serif;font-size:20px;
+        font-family:$font-family;font-size:20px;
       }
       h2{
-        font-family:calibri,serif;font-size:30px;
+        font-family:$font-family;font-size:30px;
       }
 	</style>
 <body>
