--- a/project0/education.html
+++ b/project0/education.html
@@ -4,16 +4,17 @@
 	<title>EDUCATION</title>
 </head>
      <style>
+      $font-family:calibri,garamond,serif;
      	h1 {
         text-align: center;
         color: "red";
         font-size: 40px;
       }
       h2{
-        font-family:calibri,serif;font-size:30px;
+        font-family:$font-family;font-size:30px;
       }
       h3{
-        font-family:calibri,garamond,serif;font-size:20px;
+        font-family:$font-family;font-size:20px;
       }
       /* Create four equal columns that floats next to each other */
       .column {
@@ -35,7 +36,7 @@
       body {
       background-color: #92a8d1;}
       p{
-        font-family:calibri,garamond,serif;font-size:20px;
+        font-family:$font-family;font-size:20px;
       }
      </style>
 <body>
