--- a/project0/journey.html
+++ b/project0/journey.html
@@ -4,16 +4,17 @@
 	<title>MSIT JOURNEY</title>
 </head>
 <style>
+  $font-family:calibri,garamond,serif;
       h1 {
         text-align: center;
         color: "red";
         font-size: 40px;
       }
       h2{
-        font-family:calibri,serif;font-size:30px;
+        font-family:$font-family;font-size:30px;
       }
       h3{
-        font-family:calibri,garamond,serif;font-size:20px;
+        font-family:$font-family;font-size:20px;
       }
 
       th, td {
@@ -31,18 +32,18 @@
      body {
       background-color: #92a8d1;}
       p{
-        font-family:calibri,garamond,serif;font-size:20px;
+        font-family:$font-family;font-size:20px;
       }
       ol{
-        font-family:calibri,garamond,serif;font-size:20px;
+        font-family:$font-family;font-size:20px;
         background: #ffe5e5;
         padding: 5px;
         margin-left: 35px;
       }
  </style>
 <body>
-   <h1>MSIT JOURNEY</h1>
-   <h2>MY MSIT JOURNEY</h2>
+   <h1 text align="center">MSIT JOURNEY</h1>
+   <!-- <h2>MY MSIT JOURNEY</h2> -->
        <div class="grid-container">
           <div class="grid" style="background-color: #cce5ff">
        <p>I have joined in MIST on 13 July 2019.</p>
