--- a/project0/project0.html
+++ b/project0/project0.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,6 +7,7 @@
   </title>
   </head>
 <style>
+	$font-family:calibri,garamond,serif;
 ul {
   list-style-type: none;
   margin: 0;
@@ -32,14 +34,15 @@ h1 {
         font-size: 40px;
       }
       ul{
-        font-family:calibri,garamond,serif;font-size:20px;
+        font-family:$font-family;font-size:20px;
       }
       body {
       background-color: #92a8d1;}
 </style>
 <body>
-
-<h1>MY MSIT JOURNEY</h1>
+<div class="jumbotron text-center">
+  <h1>MY MSIT JOURNEY</h1> 
+</div>
 
 <ul>
   <li><a href="file:///C:/Users/Divya/Documents/project0/aboutme.html">ABOUT ME</a></li>
